Fix checkbox wrapping

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -44,3 +44,9 @@ img.thumb {
 .lighbox-container * {
   max-width: 100%;
 }
+
+fieldset span {
+  margin-right: 15px;
+  display: inline-block;
+  // white-space: pre-wrap;
+}
